@@ -10,8 +10,11 @@ import org.jetbrains.research.kex.util.getPathSeparator
 import org.jetbrains.research.kthelper.KtException
 import org.jetbrains.research.kthelper.logging.log
 import java.nio.file.Paths
+import java.util.concurrent.TimeUnit
 import kotlin.io.path.deleteIfExists
 import kotlin.io.path.readText
+
+private val timeout = kexConfig.getLongValue("runner", "timeout", 10000L)
 
 class ExecutionException(cause: Throwable) : KtException("", cause)
 
@@ -39,6 +42,8 @@ class SymbolicExternalTracingRunner(val ctx: ExecutionContext) {
     fun run(klass: String, setup: String, test: String): ExecutionResult {
         val pb = ProcessBuilder(
             "java",
+            "-Djava.security.manager",
+            "-Djava.security.policy==kex.policy",
             "-classpath", executionClassPath.joinToString(getPathSeparator()),
             executorKlass,
             "--classpath", ctx.classPath.joinToString(getPathSeparator()),
@@ -48,16 +53,22 @@ class SymbolicExternalTracingRunner(val ctx: ExecutionContext) {
             "--test", test,
             "--output", "$traceFile"
         )
-        log.debug("Executing process with command ${pb.command().joinToString(" ")}")
+        log.debug("Executing process with command:\n${pb.command().joinToString(" ")}")
 
-        val process = pb.start()
-        process.waitFor()
+        try {
+            val process = pb.start()
+            process.waitFor(timeout, TimeUnit.MILLISECONDS)
+            if (process.isAlive) {
+                process.destroy()
+            }
 
-//        if (process.exitValue() != 0)
-//            throw ExecutionException(process.errorStream.bufferedReader().readText())
-
-        return KexSerializer(ctx.cm).fromJson<ExecutionResult>(traceFile.readText()).also {
-            traceFile.deleteIfExists()
+            val result = KexSerializer(ctx.cm).fromJson<ExecutionResult>(traceFile.readText()).also {
+                traceFile.deleteIfExists()
+            }
+            log.debug("Execution result: $result")
+            return result
+        } catch (e: InterruptedException) {
+            throw ExecutionException(e)
         }
     }
 }
